--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 			</div><!-- /.container -->
 			<footer>
 	    		<ul>
-	        		<li><a href="mailto:a.jaremko@lse.com">email</a></li>
+	        		<li><a href="mailto:sp445-student@lse.com">email</a></li>
 	        		<li><a href="https://sp445-student.github.com">github.com/sp445-student</a></li>
 				</ul>
 			</footer>
