--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:sp445-student@lse.com">email</a></li>
-	        		<li><a href="https://sp445-student.github.com">github.com/sp445-student</a></li>
+	        		<li><a href="https://sp445-student.github.com">github.com/sp445-student.io</a></li>
 				</ul>
 			</footer>
 		</body>
