--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
 			<footer>
 	    		<ul>
 	        		<li><a href="mailto:sp445-student@lse.com">email</a></li>
-	        		<li><a href="https://SP445-student.github.com">github.com/SP445-student.io</a></li>
+	        		<li><a href="https://SP445-student.github.io">github.com/SP445-student.github.io</a></li>
 				</ul>
 			</footer>
 		</body>
